--- a/details.html
+++ b/details.html
@@ -11,6 +11,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/call.css">
+	<link rel="stylesheet" href="css/details.css">
 </head>
 <body id="home">
 	<div class="wrapper"> <!--Main wrapper-->
@@ -62,130 +63,54 @@
 				</nav>
 			</div>
 		</header> <!--Header-->
-
-		<section class="header"> <!--Welcome-->
-			<div class="section_container">
-				<div class="left_side">
-					<h1>SALE 50% OFF</h1>
-					<h3>Tissot and Hublot Watches</h3>
-					<span>100% Original watch.</span>
-
-					<div class="t_watch_options">
-						<div class="color_box">
-							<span class="sub_title">Color</span>
-							<ul class="tabs_nav" data-tab-name="Tab1">
-								<li class="tab_btn c_white" data-title="tab4"></li>
-								<li class="tab_btn c_black" data-title="tab1"></li>
-								<li class="tab_btn c_grey" data-title="tab2"></li>
-								<li class="tab_btn c_orange active" data-title="tab3"></li>
-							</ul>
-						</div>
-						<div class="quantity">
-							<span class="sub_title">Quantity</span>
-							<input type="text" placeholder="0">
-						</div>
-						<div class="size_box">
-							<span class="sub_title">Size</span>
-							<ul>
-								<li class="size">52 mm</li>
-								<li class="size">48 mm</li>
-								<li class="size active">45 mm</li>
-								<li class="size">42 mm</li>
-								<li class="size">40 mm</li>
-								<li class="size">38 mm</li>	
-							</ul>
-						</div>
-					</div>
-
-					<div class="btn_container">
-						<a href="#" class="btn btn_default btn_orange btn_shadow">$220 Buy Now</a>
-					</div>
-					<p class="small">You will receive your delivery within 5 working days.</p>
+		
+		<section class="details">
+			<div class="heading titleD">
+				<h1>A time Store</h1>
+			</div>
+			<div class="equal-height">
+				<div class="item">
+					<img src="" alt="">
+					<h2>MANUFACTURE</h2>
+					<p>Here, the whole range of professions and production processes necessary for the design and manufacture of Hublot watches is assembled under one roof.</p>
 				</div>
-				<div class="right_side">
-					<ul class="tabs_content" data-tab-name="Tab1">
-						<li class="tab_content" data-title="tab1"><img src="img/MainBig3.png" alt=""></li>
-						<li class="tab_content" data-title="tab2"><img src="img/MainBig2.png" alt=""></li>
-						<li class="tab_content" data-title="tab3"><img src="img/MainBig.png" alt=""></li>
-						<li class="tab_content" data-title="tab4"><img src="img/MainBig4.png" alt=""></li>
-					</ul>				
+				<div class="item">
+					<img src="" alt="">
+					<h2>MECHANISMS</h2>
+					<p>The integration of production processes at the watch manufactory reaches the top when it becomes possible to equip the manufactured watch with its own developed watch movements.</p>
+				</div>
+				<div class="item">
+					<img src="" alt="">
+					<h2>CONCRETE</h2>
+					<p>Work with materials - be it an improvement in the strength and aesthetic properties of traditional precious metal alloys or the invention of completely new composites.</p>
 				</div>
 			</div>
-		</section> <!--Welcome-->
-
-		<section id="features" class="features"> <!-- Features -->
 			<div class="heading">
-				<h1>Features</h1>
+				<h1>Materials</h1>
+			</div> 	
+			<div class="materials-a">
+				<div class="item">
+					<h2>ALUMINUM</h4>
+					<p>VERY SOFT METAL.</p>
+				</div>
+				<div class="item">
+					<h2>CARBON</h4>
+					<p>EASY, AS PER, AND STRENGTH, AS STEEL.</p>
+				</div>
+				<div class="item">
+					<h2>CERAMICS</h4>
+					<p>EXCELLENT HARDNESS AND STRENGTH FOR HOUSING AND BEZEL HOURS.</p>
+				</div>
+				<div class="item">
+					<h2>GOLD</h4>
+					<p>EXCELLENT HARDNESS AND DURABILITY FOR CASES AND WITHOUT WHEEL HOURS. EXCLUSIVE RED COLOR, MORE SATURABLE THAN TRADITIONAL RED GOLD 5N.</p>
+				</div>
 			</div>
-			<div class="section_container">
-				<ul>
-					<li>
-						<i class="fa fa-clock-o"></i>
-						<h5>The Watches</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Provident ipsa pariatur. Corporis rem aliquam minima!</p>
-					</li>
-					<li>
-						<i class="far fa-sun"></i>
-						<h5>For Daily Life</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Provident ipsa pariatur. Corporis rem aliquam minima!</p>
-					</li>
-					<li>
-						<i class="fa fa-gift"></i>
-						<h5>Sales & Gifts</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Provident ipsa pariatur. Corporis rem aliquam minima!.</p>
-					</li>
-					<li>
-						<i class="fa fa-object-group"></i>
-						<h5>Large Assortment</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Provident ipsa pariatur. Corporis rem aliquam minima!</p>
-					</li>										
-				</ul>
+			<div class="wrapper-details">
+				
 			</div>
-		</section> <!-- Features -->
+		</section>
 
-		<section id="info" class="features_02"> <!-- Info -->
-			<div class="heading">
-				<h1>Info</h1>
-			</div>		
-			<div class="section_container">
-				<ul>
-					<li>
-						<h5>All-inclusive Pricing 
-							<span>Learn <a href="#">How Pricing Works</a></span>
-						</h5>
-						<ul>
-							<li><i class="fa fa-lemon-o"></i> No hidden fees</li>	
-							<li><i class="fa fa-lemon-o"></i> No setup charges</li>
-							<li><i class="fa fa-lemon-o"></i> Free artist review</li>
-						</ul>
-						<a href="#" class="btn btn_small btn_orange">Learn More</a>
-					</li>
-					<li>
-						<h5>Free Shipping
-							<span>Order Watch Today...</span>
-						</h5>
-						<ul>
-							<li><i class="fa fa-lemon-o"></i> Almaty Free 2-week Delivery</li>	
-							<li><i class="fa fa-lemon-o"></i> Karaganda Free 1-week Delivery</li>
-							<li><i class="fa fa-lemon-o"></i> Astana Super Delivery 3 days</li>
-						</ul>
-						<a href="#" class="btn btn_small btn_orange">Learn More</a>
-					</li>
-					<li>
-						<h5>Free Shipping
-							<span>Order Watch Today...</span>
-						</h5>
-						<ul>
-							<li><i class="fa fa-lemon-o"></i> No hidden fees</li>	
-							<li><i class="fa fa-lemon-o"></i> No setup charges</li>
-							<li><i class="fa fa-lemon-o"></i> Free artist review</li>
-						</ul>
-						<a href="#" class="btn btn_small btn_orange">Learn More</a>
-					</li>										
-				</ul>
-				<div class="img_box"><img src="img/menWatch.jpg" alt=""></div>
-			</div>
-		</section> <!-- Info -->
 		
 		<section id="contacts" class="contacts"> <!-- Contacts -->
 			<div class="heading">
