--- a/details.html
+++ b/details.html
@@ -70,17 +70,17 @@
 			</div>
 			<div class="equal-height">
 				<div class="item">
-					<img src="" alt="">
+					<img src="img/conveyor-512.png" alt="">
 					<h2>MANUFACTURE</h2>
 					<p>Here, the whole range of professions and production processes necessary for the design and manufacture of Hublot watches is assembled under one roof.</p>
 				</div>
 				<div class="item">
-					<img src="" alt="">
+					<img src="img/mechanism-icon-png-5.png" alt="">
 					<h2>MECHANISMS</h2>
 					<p>The integration of production processes at the watch manufactory reaches the top when it becomes possible to equip the manufactured watch with its own developed watch movements.</p>
 				</div>
 				<div class="item">
-					<img src="" alt="">
+					<img src="img/cement_icon_194146.png" alt="">
 					<h2>CONCRETE</h2>
 					<p>Work with materials - be it an improvement in the strength and aesthetic properties of traditional precious metal alloys or the invention of completely new composites.</p>
 				</div>
@@ -89,25 +89,33 @@
 				<h1>Materials</h1>
 			</div> 	
 			<div class="materials-a">
-				<div class="item">
+				<div class="item2">
+					<img src="img/hublot-materials-aluminium.png" alt="">
 					<h2>ALUMINUM</h4>
-					<p>VERY SOFT METAL.</p>
+					<p>VERY SOFT METAL AND DURABILITY</p>
 				</div>
-				<div class="item">
+				<div class="item2">
+					<img src="img/hublot-materials-carbon.png" alt="">
 					<h2>CARBON</h4>
-					<p>EASY, AS PER, AND STRENGTH, AS STEEL.</p>
+					<p>EASY AS PER AND STRENGTH AS STEEL</p>
 				</div>
-				<div class="item">
+				<div class="item2">
+					<img src="img/hublot-materials-ceramic.png" alt="">
 					<h2>CERAMICS</h4>
-					<p>EXCELLENT HARDNESS AND STRENGTH FOR HOUSING AND BEZEL HOURS.</p>
+					<p>EXCELLENT HARDNESS AND DURABILITY</p>
 				</div>
-				<div class="item">
+				<div class="item2">
+					<img src="img/hublot-materials-kgold.png" alt="">
 					<h2>GOLD</h4>
-					<p>EXCELLENT HARDNESS AND DURABILITY FOR CASES AND WITHOUT WHEEL HOURS. EXCLUSIVE RED COLOR, MORE SATURABLE THAN TRADITIONAL RED GOLD 5N.</p>
+					<p>EXCLUSIVE RED GOLD COLOR, TRADITIONAL RED GOLD 5N.</p>
 				</div>
 			</div>
 			<div class="wrapper-details">
 				
+				<div>
+					<p>Pure aluminum is an extremely soft metal. In industry, aluminum alloys with copper, magnesium, zinc, manganese and titanium are used.</p>
+					<p>The crust consists of about 18.5% carbon. When creating a Hublot watch from carbon, carbon fiber is produced. Then this fiber is woven and impregnated with resin; The resulting material is used for the manufacture of watch cases and some parts of the clock mechanism. The weight of carbon fiber is less than 2.6 g / cm3.</p>
+				</div>
 			</div>
 		</section>
 
