--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<ul class="navigation show-mobile-nav">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="details.html">Details</a></li>
-						<li><a href="items.html">Assortment</a></li>
+						<li><a href="items.php?page=1">Assortment</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="#contacts">Contacts</a></li>
 						<li class="click-login">
